# tinnitus

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: clippy.yml  fmt.yml  test.yml  udeps.yml
src/: main.rs  utils.rs
