[package]
name = "tinnitus"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
description = "A TRT app for audio notching"

[dependencies]
anyhow = "1.0.75"
assert_no_alloc = "1.1.2"
clap = { version = "4.4.6", features = ["derive"] }
cpal = "0.15.2"
crossterm = "0.27.0"
ctrlc = "3.4.1"
fundsp = "0.15.0"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }

# make release efficient
[profile.release]
lto = true
