[package]
name = "tinnitus"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
description = "A TRT app for audio notching"

[dependencies]
anyhow = "1.0.82"
assert_no_alloc = "1.1.2"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
crossterm = "0.27.0"
ctrlc = "3.4.4"
fundsp = "0.17.1"

# make release efficient
[profile.release]
lto = true
